--- a/Telefonia/views/index.html
+++ b/Telefonia/views/index.html
@@ -18,28 +18,13 @@
     <h2 class="home-h2">NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVILES</strong></h2>
     <div class="tarifas-lineas-movil">
         <div class="tarifa-linea-movil">
-            <h3><strong>19,99 €/mes</strong></h3>
-            <div class="info-tarifa-linea-movil">
-              <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
-              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-            </div>
-          <button class="button">Contratar</button>
-        </div>
-        <div class="tarifa-linea-movil">
-          <h3><strong>29,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
-            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
+          <img  src="/images/movil-tarifa-1.png" alt="">
       </div>
       <div class="tarifa-linea-movil">
-          <h3><strong>49,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
-            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
+          <img  src="/images/movil-tarifa-2.png" alt="">
+      </div>
+      <div class="tarifa-linea-movil">
+          <img  src="/images/movil-tarifa-3.png" alt="">
       </div>
     </div>
     <h2 class="home-h2">LA <strong>EMPRESA</strong> DE LAS <strong>EMPRESAS</strong></h2>
