--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/movil.css"/>
+    <link rel="stylesheet" href="../../public/css/linea-internet.css"/>
   
 
     <script src="../../public/js/jquery.min.js"></script>
@@ -50,8 +50,71 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-<div class="movil-content">
-    <img  src="../../public/images/detalles-watch.png" >
+<div class="linea-internet-content">
+    <h1>Línea Internet</h1>
+    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS INTERNET</strong></h2>
+    <div class="tarifas-lineas-internet">
+        <div class="tarifa-linea-internet">
+            <img  src="../../public/images/internet-tarifa-1.png" alt="">
+        </div>
+        <div class="tarifa-linea-internet">
+            <img  src="../../public/images/internet-tarifa-2.png" alt="">
+        </div>
+        <div class="tarifa-linea-internet">
+            <img  src="../../public/images/internet-tarifa-3.png" alt="">
+        </div>
+    </div>
+    <div class="contacto-linea-internet-container">
+        <div class="contacto-linea-internet">
+            <img  src="/images/icons/settings_input_component_black_48dp.svg" alt="">
+            <div class="info-contact-lineas-internet">
+                <h3>Configura tu tarifa a tu medida</h3>
+                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
+            </div>
+            <a href="/configurador"><button  class="button">Configurar</button></a>
+        </div>
+    </div>
+    <div class="razones-linea-internet-container">
+        <h3>¿POR QUÉ CONTRATAR TU LÍNEA DE FIJO CON TELEFÓNICO?</h3>
+        <div class="razones-linea-internet">
+            <div class="razon">
+                <img  src="/images/icons/euro_black_24dp.svg" alt="">
+                <p>Configurar tu tarifa a tu medida</p>
+            </div>
+            <div class="razon">
+                <img  src="/images/icons/thumb_up_alt_black_48dp.svg" alt="">
+                <p>La empresa con mejor índice de satisfacción</p>
+            </div>
+            <div class="razon">
+                <img  src="/images/icons/home_black_48dp.svg" alt="">
+                <p>Instalación en tu hogar totalmente gratuita</p>
+            </div>
+            <div class="razon">
+                <img  src="/images/icons/sentiment_satisfied_alt_black_48dp.svg" alt="">
+                <p>Nos encargamos de todos lod trámites por ti</p>
+            </div>
+            <div class="razon">
+                <img  src="/images/icons/alarm_black_24dp.svg" alt="">
+                <p>Línea de internet lista para usar 24h después de la contratación</p>
+            </div>
+            <div class="razon">
+                <img  src="/images/icons/build_black_48dp.svg" alt="">
+                <p>Si te quedas sin internet te lo arreglamos en persona. Hasta los domingos.</p>
+            </div>
+        </div>
+    </div>
+    <div class="localizador-linea-internet">
+        <h3>O SI LO PREFIERES, PUEDES <strong>ACERCARTE</strong> A ALGUNA DE <strong>NUESTRAS TIENDAS</strong></h3>
+        <div class="buscador-linea-internet">
+            <img  src="/images/icons/place_black_48dp.svg" alt="">
+            <div class="info-contact-lineas-internet">
+                <h3>Localizador de tiendas</h3>
+                <p>Si lo prefiers puedes acercarte hasta alguna de nuestras tiendas para realizar cualquier trámite. Acceder a nuestro localizador de tiendas, en el encontrarás la localización y el horario de las tiendas más cercanas.</p>
+            </div>
+            <a href="/buscador"><button class="button">VER TIENDAS</button></a>
+        </div>
+    </div>
+    
 </div>
 
 <!--FOOTER-->
