(cantando a lo bad bunny) no quiero que nadie más me hableeeee de froooont, ya me canseeeee

--- a/Telefonia/views/buscador.html
+++ b/Telefonia/views/buscador.html
@@ -5,22 +5,22 @@
     <h2>O utiliza nuestro buscador de tiendas:</h2>
     <div class="bucador-container">
         <select class="buscar-select" name="cars" id="cars">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option >Dirección</option>
+            <option >Dirección1</option>
+            <option >Dirección2</option>
+            <option >Dirección3</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option >Email</option>
+            <option >Email1</option>
+            <option >Email2</option>
+            <option >Email3</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option >Horario</option>
+            <option >Horario1</option>
+            <option >Horario2</option>
+            <option >Horario3</option>
         </select>
         <div class="resultados-busqueda">
             <h2>Resultado de tu búsqueda:</h2>
