--- a/Telefonia/views/tools.html
+++ b/Telefonia/views/tools.html
@@ -6,7 +6,7 @@
             <div class="tool-info-cont">
                 <h2>Test de Velocidad Internet</h2>
                 <p>Analice la velocidad de su línea de internet y compárela con nuestras tarifas de internet.</p>
-                <button class="button">VER MÁS</button>
+                <a href="/test-velocidad"><button class="button">VER MÁS</button></a>
             </div>
         </div>
         <div class="tool">
@@ -14,7 +14,7 @@
             <div class="tool-info-cont">
                 <h2>Configurador de packs</h2>
                 <p>Cree sus packs de Internet, Móvil y TV personalizados y consulte el precio final con nuestro configurador de packs.</p>
-                <button class="button">VER MÁS</button>
+                <a href="/configurador"><button class="button">VER MÁS</button></a>
             </div>
         </div>
         <div class="tool">
@@ -22,7 +22,7 @@
             <div class="tool-info-cont">
                 <h2>Buscador de tiendas</h2>
                 <p>Encuentra la tienda más cercana, consulta su horario y disponibilidad para recibir pedidos.</p>
-                <button class="button">VER MÁS</button>
+                <a href="/buscador"><button class="button">VER MÁS</button></a>
             </div>
         </div>
     </div>
