--- a/Telefonia/views/pequeñas-empresas.html
+++ b/Telefonia/views/pequeñas-empresas.html
@@ -1,30 +1,15 @@
 <div class="pequeñas-empresas-content">
     <h1>Pequeñas Empresas y Autónomos</h1>
     <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong> LÍNEAS MÓVILES</strong></h2>
-    <div class="tarifas-empresas">
-      <div class="tarifa-empresa">
-          <h3><strong>19,99 €/mes</strong></h3>
-          <div class="info-tarifa-empresa">
-            <img  src="images/header/linea-internet.png" alt="">
-            <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
-      </div>
-      <div class="tarifa-empresa">
-        <h3><strong>29,99 €/mes</strong></h3>
-        <div class="info-tarifa-empresa">
-          <img  src="images/header/linea-internet.png" alt="">
-          <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-        </div>
-      <button class="button">Contratar</button>
+    <div class="tarifas-lineas-movil">
+      <div class="tarifa-linea-movil">
+        <img  src="/images/movil-tarifa-1.png" alt="">
     </div>
-    <div class="tarifa-empresa">
-        <h3><strong>49,99 €/mes</strong></h3>
-        <div class="info-tarifa-empresa">
-          <img  src="images/header/linea-internet.png" alt="">
-          <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
-        </div>
-      <button class="button">Contratar</button>
+    <div class="tarifa-linea-movil">
+        <img  src="/images/movil-tarifa-2.png" alt="">
+    </div>
+    <div class="tarifa-linea-movil">
+        <img  src="/images/movil-tarifa-3.png" alt="">
     </div>
     
        
