--- a/views/buscador.html
+++ b/views/buscador.html
@@ -5,22 +5,22 @@
     <h2>O utiliza nuestro buscador de tiendas:</h2>
     <div class="bucador-container">
         <select class="buscar-select" name="cars" id="cars">
-            <option >Dirección</option>
-            <option >Dirección1</option>
-            <option >Dirección2</option>
-            <option >Dirección3</option>
+            <option >Provincia</option>
+            <option >Provincia1</option>
+            <option >Provincia2</option>
+            <option >Provincia3</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option >Email</option>
-            <option >Email1</option>
-            <option >Email2</option>
-            <option >Email3</option>
+            <option >Ciudad</option>
+            <option >Ciudad1</option>
+            <option >Ciudad2</option>
+            <option >Ciudad3</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option >Horario</option>
-            <option >Horario1</option>
-            <option >Horario2</option>
-            <option >Horario3</option>
+            <option >Código Postal</option>
+            <option >Código Postal1</option>
+            <option >Código Postal2</option>
+            <option >Código Postal3</option>
         </select>
         <div class="resultados-busqueda">
             <h2>Resultado de tu búsqueda:</h2>
