--- a/views/buscador.html
+++ b/views/buscador.html
@@ -5,22 +5,22 @@
     <h2>O utiliza nuestro buscador de tiendas:</h2>
     <div class="bucador-container">
         <select class="buscar-select" name="cars" id="cars">
-            <option >Provincia</option>
-            <option >Provincia1</option>
-            <option >Provincia2</option>
-            <option >Provincia3</option>
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option >Ciudad</option>
-            <option >Ciudad1</option>
-            <option >Ciudad2</option>
-            <option >Ciudad3</option>
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
         </select>
         <select class="buscar-select" name="cars" id="cars">
-            <option >Código Postal</option>
-            <option >Código Postal1</option>
-            <option >Código Postal2</option>
-            <option >Código Postal3</option>
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
         </select>
         <div class="resultados-busqueda">
             <h2>Resultado de tu búsqueda:</h2>
