--- a/views/empresas.html
+++ b/views/empresas.html
@@ -8,11 +8,11 @@
     <h2 class="h2-empresas">Servicios para grandes empresas</h2>
     <div class="emps-container">
         <div class="emp">
-            <img class="emp-img-cont" src="/images/hosting.jpg" >
+            <img class="emp-img-cont" src="/images/Housing.jpg" >
             <div class="emp-info-cont">
-                <h3>Hosting</h3>
+                <h3>Housing</h3>
                 <div>
-                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
                     <ul>
                         <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
                         <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
