--- a/views/index.html
+++ b/views/index.html
@@ -18,13 +18,28 @@
     <h2 class="home-h2">NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVILES</strong></h2>
     <div class="tarifas-lineas-movil">
         <div class="tarifa-linea-movil">
-          <img  src="/images/movil-tarifa-1.png" alt="">
+            <h3><strong>19,99 €/mes</strong></h3>
+            <div class="info-tarifa-linea-movil">
+              <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+            </div>
+          <button class="button">Contratar</button>
+        </div>
+        <div class="tarifa-linea-movil">
+          <h3><strong>29,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-movil">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
       </div>
       <div class="tarifa-linea-movil">
-          <img  src="/images/movil-tarifa-2.png" alt="">
-      </div>
-      <div class="tarifa-linea-movil">
-          <img  src="/images/movil-tarifa-3.png" alt="">
+          <h3><strong>49,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-movil">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
       </div>
     </div>
     <h2 class="home-h2">LA <strong>EMPRESA</strong> DE LAS <strong>EMPRESAS</strong></h2>
@@ -33,8 +48,8 @@
             <img  src="/images/exitos.png" alt="">
         </div>
         <div class="empresas-home">
-            <a href="/pequeñas-empresas" class="a-home"><h2 class="empresas-home-h2">PEQUEÑAS EMPRESAS</h2></a>
-            <p>Para las empresas más pequeñas ofrecemos <strong>líneas de internet,fijo y móvil</strong> por separado. O si lo prefieres, puedes contratar alguno de nuestros <strong>packs</strong> y configurarlo a tu medida.</p>
+            <a href="/pequenas-empresas" class="a-home"><h2 class="empresas-home-h2">PEQUEÑAS EMPRESAS</h2></a>
+            <p>Para las empresas más pequenas ofrecemos <strong>líneas de internet,fijo y móvil</strong> por separado. O si lo prefieres, puedes contratar alguno de nuestros <strong>packs</strong> y configurarlo a tu medida.</p>
             <a href="/grandes-empresas" class="a-home"><h2 class="empresas-home-h2">GRANDES EMPRESAS</h2></a>
             <p>Si quieres contratar nuestros servicios para una empresa de <strong>más de 10 empleados</strong> contacta con nuestro <strong>servicio de ventas en el <strong>900 123 123</strong> para más información.</p>
         </div>
