--- a/views/pequenas-empresas.html
+++ b/views/pequenas-empresas.html
@@ -1,15 +1,30 @@
-<div class="pequeñas-empresas-content">
+<div class="pequenas-empresas-content">
     <h1>Pequeñas Empresas y Autónomos</h1>
     <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong> LÍNEAS MÓVILES</strong></h2>
-    <div class="tarifas-lineas-movil">
-      <div class="tarifa-linea-movil">
-        <img  src="/images/movil-tarifa-1.png" alt="">
+    <div class="tarifas-empresas">
+      <div class="tarifa-empresa">
+          <h3><strong>19,99 €/mes</strong></h3>
+          <div class="info-tarifa-empresa">
+            <img  src="images/header/linea-internet.png" alt="">
+            <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+      <div class="tarifa-empresa">
+        <h3><strong>29,99 €/mes</strong></h3>
+        <div class="info-tarifa-empresa">
+          <img  src="images/header/linea-internet.png" alt="">
+          <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+        </div>
+      <button class="button">Contratar</button>
     </div>
-    <div class="tarifa-linea-movil">
-        <img  src="/images/movil-tarifa-2.png" alt="">
-    </div>
-    <div class="tarifa-linea-movil">
-        <img  src="/images/movil-tarifa-3.png" alt="">
+    <div class="tarifa-empresa">
+        <h3><strong>49,99 €/mes</strong></h3>
+        <div class="info-tarifa-empresa">
+          <img  src="images/header/linea-internet.png" alt="">
+          <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
+        </div>
+      <button class="button">Contratar</button>
     </div>
     
        
@@ -18,20 +33,20 @@
         <div class="contacto-empresa">
             <img  src="images/header/linea-internet.png" alt="">
             <div class="info-contact-empresas">
-                <h3>Soy una empresa pequeña y necesito otra línea de móvil</h3>
+                <h3>Soy una empresa pequena y necesito otra línea de móvil</h3>
                 <p>Sólo para pequñas empresas y autónomos ofrecemos tantas líneas extra cómo quieras. Cada una al 50% del precio original, para siempre.</p>
             </div>
             <button class="button">Contratar</button>
         </div>
     </div>
-    <h2>Servicios para pequeñas empresas y autónomos</h2>
+    <h2>Servicios para pequenas empresas y autónomos</h2>
     <div class="grandes-empresas-container">
       <div class="empresa">
-          <img class="empresa-info-img" src="/images/hosting.jpg" >
+          <img class="empresa-info-img" src="/images/Housing.jpg" >
           <div class="empresa-info-cont">
-              <h3>Hosting</h3>
+              <h3>Housing</h3>
               <div>
-                  <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                  <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
                   <ul>
                       <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
                       <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
