--- a/views/preguntas.html
+++ b/views/preguntas.html
@@ -3,10 +3,11 @@
     <div class="preguntas-container">
        <div class="preguntas-filtro">
             <select name="tipo" id="tipo-combo">
-                <option value="tipo" >Tipo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
+                <option  >Tipo</option>
+                <option >Mando</option>
+                <option >Cobertura</option>
+                <option >Instalacion</option>
+                <option >Garantía</option>
           </select>
           <input type="text" id="fname" name="fname" placeholder="Buscar..."><br><br>
        </div>
