--- a/views/tv.html
+++ b/views/tv.html
@@ -1,5 +1,5 @@
 <div class="tv-content">
-    <h1>Línea Televisión</h1>
+    <h1>Televisión</h1>
     <div class="oferta-tv">
         <div>
             <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
