--- a/public/css/linea-internet.css
+++ b/public/css/linea-internet.css
@@ -1,7 +1,7 @@
 .linea-internet-content{
     display: grid;
     justify-content: center;
-    grid-template-rows: 2% 8% 25% 20% 25% auto ;
+    grid-template-rows: 2% 5% 30% 15% 25% auto ;
     margin: 10vh 0px ; 
     height: 170vh;
 }
@@ -17,20 +17,9 @@
 
 .tarifas-lineas-internet{
     display: grid;
-    justify-content: center;
-    grid-template-columns: 20% 20% 20%;
-    gap: 10vh;
-    
-}
-
-.tarifa-linea-internet{
-    display: grid;
-    padding: 0vh !important;
-}
-
-.tarifa-linea-internet img{
-    width: 100%;
-    height: 100%;
+    grid-template-columns: auto auto auto;
+    padding: 5vh 15vh;
+    gap: 15vh;
 }
 
 .tarifa-linea-internet{
@@ -47,7 +36,6 @@
 }
 
 .contacto-linea-internet-container{
-    margin-top: 5vh;
     padding: 2vh 40vh;
     display: grid;
     height: 1vh;
