--- a/public/css/linea-movil.css
+++ b/public/css/linea-movil.css
@@ -1,7 +1,7 @@
 .linea-movil-content{
     display: grid;
     justify-content: center;
-    grid-template-rows: 2% 5% 25% 15% 25% auto ;
+    grid-template-rows: 2% 3% 25% 15% 25% auto ;
     margin: 10vh 0px ; 
     height: 220vh;
 }
@@ -17,21 +17,20 @@
 
 .tarifas-lineas-movil{
     display: grid;
-    grid-template-columns: 20% 20% 20%;
+    grid-template-columns: 25% 25% 25%;
     justify-content: center;
+    padding: 5vh 15vh;
     gap: 15vh;
 }
 
 .tarifa-linea-movil{
-    height: 45vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-
-.tarifa-linea-movil img{
-    height: 100%;
-    width: 100%;
-}
-
 .info-tarifa-linea-movil{
     display: grid;
     grid-template-columns: 20% 80%;
