--- a/views/grandes-empresas.html
+++ b/views/grandes-empresas.html
@@ -16,11 +16,11 @@
     <h2>Servicios para grandes empresas</h2>
     <div class="grandes-empresas-container">
         <div class="empresa">
-            <img class="empresa-info-img" src="/images/hosting.jpg" >
+            <img class="empresa-info-img" src="/images/Housing.jpg" >
             <div class="empresa-info-cont">
-                <h3>Hosting</h3>
+                <h3>Housing</h3>
                 <div>
-                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
                     <ul>
                         <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
                         <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
