--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/contacto.css"/>
     <link rel="stylesheet" href="/css/empresas.css"/>
     <link rel="stylesheet" href="/css/grandes-empresas.css"/>
-    <link rel="stylesheet" href="/css/pequeñas-empresas.css"/>
+    <link rel="stylesheet" href="/css/pequenas-empresas.css"/>
     <link rel="stylesheet" href="/css/mobile.css"/>
     <link rel="stylesheet" href="/css/objetos.css"/>
     <link rel="stylesheet" href="/css/packs.css"/>
@@ -79,7 +79,7 @@
 <!--HEADER-->
 <header class="header-big-container">
     <div class="header-contaiter-1">
-        <a href="/pequeñas-empresas">Autónomos y empresas</a>
+        <a href="/pequenas-empresas">Autónomos y empresas</a>
         <a href="/contacto">Contacto</a>
         <a href="/productos">Area Clientes</a>
     </div>
@@ -89,11 +89,11 @@
     <div class="header-contaiter-3">
         <a href="/linea-internet" class="header-link"><img  src="/images/header/linea-internt.png" alt=""><span>Línea Internet</span></a>
         <a href="/linea-movil" class="header-link"><img  src="/images/header/linea-movil.png" alt=""><span>Línea Móvil</span></a>
-        <a href="/tv" class="header-link"><img  src="/images/header/linea-tv.png" alt=""><span>Línea TV</span></a>
+        <a href="/tv" class="header-link"><img  src="/images/header/linea-tv.png" alt=""><span>TV</span></a>
         <a href="/packs" class="header-link"><img  src="/images/header/packs.png" alt=""><span>Packs</span></a>
         <a href="/movilesymas" class="header-link"><img  src="/images/header/movilesymas.png" alt=""><span>Móviles y más</span></a>
         <a href="/tools" class="header-link"><img  src="/images/header/tools.png" alt=""><span>Herramientas</span></a>
-        <a href="/ayuda" class="header-link"><img  src="/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
+        <a href="/ayuda" class="header-link"><img  src="/images/header/contacto.png" width="80" alt=""><span>Ayuda</span></a>
     </div>
 </header>
 
@@ -127,7 +127,7 @@
                 <h4 class="uk-margin-top">Autónomos y empresas</h4>
                 <ul class="uk-list uk-list-bullet">
                     <li><a href="/empresas">Casos de éxito</a></li>
-                    <li><a href="/pequeñas-empresas">Pequeñas empresas</a></li>
+                    <li><a href="/pequenas-empresas">pequenas empresas</a></li>
                     <li><a href="/grandes-empresas">Grandes empresas</a></li>
                 </ul>
             </div>
