casi todas las capturas (falta pedidos)

--- a/views/objetos-inteligentes.html
+++ b/views/objetos-inteligentes.html
@@ -49,52 +49,69 @@
   <div class="mobile-right-panel">
      
         <input aria-label="Buscar..." placeholder="Buscar..." class="search-input" value="">
-
+      <a class="movil-ref" href="/detalles-objetos">
       <div class="obj-card">
         <img class="obj-img" src="images/appleWatch.png" >
         <h2>Smasung Galaxy Wacth</h2>
         <p class="mobile-price">300€</p>
       </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="obj-card">
-        <img class="obj-img" src="images/appleWatch.png" >
-        <h2>Smasung Galaxy Wacth</h2>
-        <p class="mobile-price">300€</p>
-      </div>
+      </a>
+      <a class="movil-ref" href="/detalles-objetos">
+        <div class="obj-card">
+          <img class="obj-img" src="images/appleWatch.png" >
+          <h2>Smasung Galaxy Wacth</h2>
+          <p class="mobile-price">300€</p>
+        </div>
+        </a>
+        <a class="movil-ref" href="/detalles-objetos">
+          <div class="obj-card">
+            <img class="obj-img" src="images/appleWatch.png" >
+            <h2>Smasung Galaxy Wacth</h2>
+            <p class="mobile-price">300€</p>
+          </div>
+          </a>
+          <a class="movil-ref" href="/detalles-objetos">
+            <div class="obj-card">
+              <img class="obj-img" src="images/appleWatch.png" >
+              <h2>Smasung Galaxy Wacth</h2>
+              <p class="mobile-price">300€</p>
+            </div>
+            </a>
+            <a class="movil-ref" href="/detalles-objetos">
+              <div class="obj-card">
+                <img class="obj-img" src="images/appleWatch.png" >
+                <h2>Smasung Galaxy Wacth</h2>
+                <p class="mobile-price">300€</p>
+              </div>
+              </a>
+              <a class="movil-ref" href="/detalles-objetos">
+                <div class="obj-card">
+                  <img class="obj-img" src="images/appleWatch.png" >
+                  <h2>Smasung Galaxy Wacth</h2>
+                  <p class="mobile-price">300€</p>
+                </div>
+                </a>
+                <a class="movil-ref" href="/detalles-objetos">
+                  <div class="obj-card">
+                    <img class="obj-img" src="images/appleWatch.png" >
+                    <h2>Smasung Galaxy Wacth</h2>
+                    <p class="mobile-price">300€</p>
+                  </div>
+                  </a>
+                  <a class="movil-ref" href="/detalles-objetos">
+                    <div class="obj-card">
+                      <img class="obj-img" src="images/appleWatch.png" >
+                      <h2>Smasung Galaxy Wacth</h2>
+                      <p class="mobile-price">300€</p>
+                    </div>
+                    </a>
+                    <a class="movil-ref" href="/detalles-objetos">
+                      <div class="obj-card">
+                        <img class="obj-img" src="images/appleWatch.png" >
+                        <h2>Smasung Galaxy Wacth</h2>
+                        <p class="mobile-price">300€</p>
+                      </div>
+                      </a>
       
   </div>
 </div>
