--- a/views/moviles.html
+++ b/views/moviles.html
@@ -62,43 +62,53 @@
      
         <input aria-label="Busca móviles..." placeholder="Busca móviles..." class="search-input" value="">
 
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
-      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
-        <img  src="images/xiaomi-movil.png" >
-       
-      </div></a>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
       
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
+      <div class="mobile-card">
+        <img class="mobile-img" src="images/10Tpro.png" >
+        <h2>Xiaomi Max Pro</h2>
+        <p class="mobile-price">300€</p>
+      </div>
   </div>
 </div>
 <script>
@@ -2081,4 +2091,3 @@ $(document).ready(function() {
   window.wNumb = wNumb;
 }());
 </script>
-
