--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -79,7 +79,7 @@
 <!--HEADER-->
 <header class="header-big-container">
     <div class="header-contaiter-1">
-        <a href="/pequenas-empresas">Autónomos y empresas</a>
+        <a href="/empresas">Autónomos y empresas</a>
         <a href="/contacto">Contacto</a>
         <a href="/productos">Area Clientes</a>
     </div>
@@ -109,8 +109,8 @@
                     <li><a href="/preguntas">Preguntas frecuentes</a></li>
                     <li><a href="/buscador">Bucador de tiendas</a></li>
                     <li><a href="/test-velocidad">Test de velocidad de internet</a></li>
-                    <li><a href="/packs">Configurador de packs</a></li>
-                    <li><a href="/area-cliente">Área cliente</a></li>
+                    <li><a href="/configurador">Configurador de packs</a></li>
+                    <li><a href="/pedidos">Área cliente</a></li>
                 </ul>
             </div>
 
@@ -127,7 +127,7 @@
                 <h4 class="uk-margin-top">Autónomos y empresas</h4>
                 <ul class="uk-list uk-list-bullet">
                     <li><a href="/empresas">Casos de éxito</a></li>
-                    <li><a href="/pequenas-empresas">pequenas empresas</a></li>
+                    <li><a href="/pequenas-empresas">Pequeñas empresas</a></li>
                     <li><a href="/grandes-empresas">Grandes empresas</a></li>
                 </ul>
             </div>
