--- a/views/packs.html
+++ b/views/packs.html
@@ -37,6 +37,6 @@
     </div>
 
     <h2 class="h2-config-pack">Configuta tu pack a medida</h2>
-    <p>Puede acceder a nuestro <a href="#">configurador de packs</a> para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <p>Puede acceder a nuestro <a href="/configurador">configurador de packs</a> para personalizar un pack a medida que se ajuste a sus necesidades. </p>
     <img class="pack-img" src="/images/pack.jpg" alt="">
 </div>
