--- a/views/pedidos.html
+++ b/views/pedidos.html
@@ -29,7 +29,7 @@
                 <p><strong>Fecha de compra:</strong> 01/06/1995</p>
                 <p><strong>Fecha de envío:</strong> 02/06/1995</p>
                 <br>
-                <p><strong>Estado:</strong> Sin entregar</p>
+                <div class="entregado">ENTREGADO</div>
             </div>
         </div>
         <div class="pedido-card">
@@ -51,7 +51,7 @@
                 <p><strong>Fecha de compra:</strong> 01/06/1995</p>
                 <p><strong>Fecha de envío:</strong> 02/06/1995</p>
                 <br>
-                <p><strong>Estado:</strong> Sin entregar</p>
+                <div class="entregado">ENTREGADO</div>
             </div>
         </div>
         <div class="pedido-card">
@@ -73,7 +73,7 @@
                 <p><strong>Fecha de compra:</strong> 01/06/1995</p>
                 <p><strong>Fecha de envío:</strong> 02/06/1995</p>
                 <br>
-                <p><strong>Estado:</strong> Sin entregar</p>
+                <div class="entregado">ENTREGADO</div>
             </div>
         </div>
 
