--- a/views/empresas.html
+++ b/views/empresas.html
@@ -5,7 +5,7 @@
         <img class="emp-img" src="/images/exitos.png" >
     </div>
 
-    <h2 class="h2-empresas">Servicios para grandes empresas</h2>
+    <h2 class="h2-empresas">Servicios para empresas</h2>
     <div class="emps-container">
         <div class="emp">
             <img class="emp-img-cont" src="/images/Housing.jpg" >
